fixed the alignment of subscribe

--- a/css/custom.css
+++ b/css/custom.css
@@ -67,12 +67,16 @@ padding-top:5px;
 }
 .newsletter-email input{
   border-radius: 0px;
+  margin-left: 10px;
+
 }
 .newsletter-submit{
   padding-left: 0px;
+
 }
 .newsletter-submit input{
   border-radius: 0px 10px 10px 0px;
+  margin-left: 14px;
 }
 .social-profiles a i{
   transition: all .5s;
